--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       <meta name="description" content="New SmileBASIC Source">
       <link data-favicon rel="shortcut icon" href="favicon.ico">
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1603947909" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1603947909"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1603947909"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1603950302" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1603950302"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1603950302"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603947909"></script>
-      <script src="dom.js?v=1603947909"></script>
-      <script src="api.js?v=1603947909"></script>
-      <script src="index.js?v=1603947909"></script>
-      <script src="sbs2-markup/highlight.js?v=1603947909"></script>
-      <script src="sbs2-markup/parse.js?v=1603947909"></script>
-      <script src="sbs2-markup/render.js?v=1603947909"></script>
+      <script src="libbo.js?v=1603950302"></script>
+      <script src="dom.js?v=1603950302"></script>
+      <script src="api.js?v=1603950302"></script>
+      <script src="index.js?v=1603950302"></script>
+      <script src="sbs2-markup/highlight.js?v=1603950302"></script>
+      <script src="sbs2-markup/parse.js?v=1603950302"></script>
+      <script src="sbs2-markup/render.js?v=1603950302"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603947909" />
+      <link rel="stylesheet" href="index.css?v=1603950302" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -347,8 +347,8 @@ function leftpaneclick(event)
                            </div>
                         </div>
                      </div>
-                     <p class="uk-padding-small" id="nosearchresults" hidden>No results...</p>
-                     <ul uk-accordion="multiple: true">
+                     <p class="" id="nosearchresults" hidden>No results...</p>
+                     <ul uk-accordion="multiple: true" id="searchresultscontainer" hidden>
                         <div data-tmpl="searchresultsection" data-tmpld='{"data-text":"Pages"}'
                              id="searchpagesresults"></div>
                         <div data-tmpl="searchresultsection" data-tmpld='{"data-text":"Users"}'
@@ -1071,14 +1071,10 @@ function leftpaneclick(event)
             <td data-date=".textContent"></td>
          </tr>
          </table>
-         <!--<ul class="uk-list" id="categorytreeroot">
-         </ul>-->
          <li id="categorytreenode" class="uk-text-truncate uk-display-block">
             <a data-category=".textContent" data-categorylink="href" data-spa></a>
-               <!--class="uk-text-truncate uk-display-block"></a>-->
             <ul class="uk-list" data-nodelist>
             </ul>
-            <!--<div data-itemlist></div>-->
          </li>
          <!-- LOC:ROUTES -->
          <div id="routehome" class="uk-container uk-margin-top uk-margin-bottom">
