--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       <meta name="description" content="New SmileBASIC Source">
       <link data-favicon rel="shortcut icon" href="favicon.ico">
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1603951148" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1603951148"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1603951148"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1603951486" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1603951486"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1603951486"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603951148"></script>
-      <script src="dom.js?v=1603951148"></script>
-      <script src="api.js?v=1603951148"></script>
-      <script src="index.js?v=1603951148"></script>
-      <script src="sbs2-markup/highlight.js?v=1603951148"></script>
-      <script src="sbs2-markup/parse.js?v=1603951148"></script>
-      <script src="sbs2-markup/render.js?v=1603951148"></script>
+      <script src="libbo.js?v=1603951486"></script>
+      <script src="dom.js?v=1603951486"></script>
+      <script src="api.js?v=1603951486"></script>
+      <script src="index.js?v=1603951486"></script>
+      <script src="sbs2-markup/highlight.js?v=1603951486"></script>
+      <script src="sbs2-markup/parse.js?v=1603951486"></script>
+      <script src="sbs2-markup/render.js?v=1603951486"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603951148" />
+      <link rel="stylesheet" href="index.css?v=1603951486" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -1213,6 +1213,10 @@ function leftpaneclick(event)
          </div>
          <p class="uk-text-meta">Each local super user has edit and delete
           permissions on all pages at any level under this category</p>
+      </label>
+      <label class="uk-form-label" uk-margin>
+         <span>Order (Float value, ascending):</span>
+         <input rows=3 class="uk-input uk-resize-vertical" name="values.order"></input>
       </label>
       <input type="submit" value="Submit" class="uk-button uk-button-primary">
    </div>
