Added system selector, fixed key thing again

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       <meta name="description" content="New SmileBASIC Source">
       <link data-favicon rel="shortcut icon" href="favicon.ico">
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604022550" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1604022550"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604022550"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1604030686" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1604030686"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1604030686"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1604022550"></script>
-      <script src="dom.js?v=1604022550"></script>
-      <script src="api.js?v=1604022550"></script>
-      <script src="index.js?v=1604022550"></script>
-      <script src="sbs2-markup/highlight.js?v=1604022550"></script>
-      <script src="sbs2-markup/parse.js?v=1604022550"></script>
-      <script src="sbs2-markup/render.js?v=1604022550"></script>
+      <script src="libbo.js?v=1604030686"></script>
+      <script src="dom.js?v=1604030686"></script>
+      <script src="api.js?v=1604030686"></script>
+      <script src="index.js?v=1604030686"></script>
+      <script src="sbs2-markup/highlight.js?v=1604030686"></script>
+      <script src="sbs2-markup/parse.js?v=1604030686"></script>
+      <script src="sbs2-markup/render.js?v=1604030686"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1604022550" />
+      <link rel="stylesheet" href="index.css?v=1604030686" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -78,6 +78,26 @@ function typeToIcon(el, replace)
       }
    } 
    return el.curicon;
+}
+var stoic = {
+   "3ds" : {"t" : "3DS", "i" : "3ds.svg" },
+   "n3ds" : {"t" : "New 3DS", "i" : "3ds.svg" },
+   "switch" : {"t" : "Switch", "i" : "switch.svg" }
+};
+function systemToIcon(el, replace)
+{
+   if(replace !== undefined)
+   {
+      el.system = replace;
+
+      if(stoic[replace])
+      {
+         el.querySelector("[data-icon]").setAttribute("data-src", stoic[replace].i);
+         el.querySelector("[data-text]").textContent = stoic[replace].t;
+      }
+   }
+
+   return el.system;
 }
 function pwcountset(el, replace)
 {
@@ -1109,11 +1129,15 @@ function leftpaneclick(event)
                <h1 class="uk-width-expand uk-margin-small-right" data-title=".textContent"></h1>
                <div data-tmpl="pagecontrols"></div>
             </div>
-            <div data-programcontainer>
+            <div data-programcontainer hidden>
                <div data-tmpl="slideshow" hidden>
                </div>
-               <div class="uk-flex uk-flex-bottom uk-margin-small-left 
+               <div class="uk-flex uk-flex-middle uk-margin-small-left 
                   uk-margin-small-right">
+                  <div data-system=".systemToIcon" class="uk-flex-none texticon">
+                     <img data-icon uk-svg="ratio: 1.2">
+                     <span data-text class="programsystem"></span>
+                  </div>
                   <span class="uk-width-expand"></span>
                   <div class="uk-flex-none texticon">
                      <img data-src="key2.svg" uk-svg="ratio: 1.2">
@@ -1240,6 +1264,14 @@ function leftpaneclick(event)
       <label data-pagekey class="uk-form-label" uk-margin>
          <span>Key:</span>
          <input class="uk-input uk-form-large" name="values.key">
+      </label>
+      <label data-pagesystem class="uk-form-label" uk-margin>
+         <span>System:</span>
+         <select class="uk-select" name="values.system">
+            <option value="3ds">3DS (Any)</option>
+            <option value="n3ds">New 3DS</option>
+            <option value="switch" selected>Switch</option>
+         </select>
       </label>
       <label class="uk-form-label" uk-margin>
          <span>Content:</span>
